@@ -17,29 +17,14 @@
   <a href="http://fink.sourceforge.net/pdb/package.php/lilypond">stable</a>).
 </p>
 
-<p>You need to:
-  <ul>
-    <li>Get the Fink package manager from <a href="http://fink.sourceforge.net">http://fink.sourceforge.net</a>.
-    </li>
-    <li>Get the Lilypond package description by enabling the "unstable" tree
-      in fink and executing <code>fink selfupdate-cvs</code>.
-    </li>
-  </ul>
-
-<p>Then do:
-  <blockquote>
-    <pre>
-      fink install lilypond-unstable
-    </pre>
-  </blockquote>
-</p>
-
-<p>That's it!  The command should compile and install all LilyPond
-  prerequisites (python, TeX, X11, ghostscript) and then LilyPond
-  itself.
-</p>
 <p>
-  After that, you may <a href="getting-started.html"> test your
-    installation</a>.
+A tutorial on installing LilyPond on Fink can be found in the <a
+href="http://lists.gnu.org/archive/html/lilypond-user/2005-02/txtmVnW1IShBT.txt">mailing
+list archives</a>.
+
+</p>
+
+<p>
+After that, you may <a href="getting-started.html"> test your installation</a>.
 </p>
 
