@@ -1,3 +1,8 @@
+2005-04-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/install/macos.html (href): link to Libero Mureddu's
+	tutorial.
+
 2005-04-16  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/contact.ihtml: Add translation header with revision marker.
